# elastic-das-2d

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: final_demo.ipynb
scripts/: benchmark_backends.py  build_safod_initial_model.py  build_safod_model.py  run_homogeneous_demo.py  run_numpy_homogeneous.py  run_performance_study.py  run_safod_initial_forward.py  validate_magnitude_scaling.py  validate_moment_tensor_linearity.py  validate_pointforce_2d.py  validate_reciprocity.py
src/: analytical_2d.py  das.py  grid.py  model.py  plotting.py  receivers.py  safod_builder.py  sampling.py  simulator.py  solver_numba_fused.py  solver_numba_tiled.py  solver_numpy.py  solver_numpy_pointforce.py  source.py  source_injection.py  source_spreading.py
