[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic-das-project"
version = "0.1.0"
description = "2D elastic forward modelling with earthquake-like sources for borehole DAS"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Alina Belyalova" }
]
license = { text = "Proprietary" }
dependencies = [
  "numpy>=1.26,<3.0",
  "scipy>=1.11,<2.0",
  "pandas>=2.1,<3.0",
  "matplotlib>=3.8,<4.0",
  "numba>=0.59,<1.0",
]

[project.optional-dependencies]
dev = [
  "jupyterlab>=4.0,<5.0",
  "ipykernel>=6.29,<7.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
